# lottery_x_platform

./: bun.lockb  implementation_plan.md  lint_output.txt  next.config.ts  package-lock.json  package.json
docs/: asia-scraper-integration.md  asia-scraper-quickstart.md  asia-scraper.md  database_api_walkthrough.md  europe-scraper-integration.md  europe-scraper-quickstart.md  europe-scraper.md  implementation_plan.md  northamerica-scraper-integration.md  northamerica-scraper-quickstart.md  northamerica-scraper.md  task.md  ui_ux_design.md  walkthrough.md
drizzle/: 0000_bumpy_wrecker.sql
public/: manifest.json  sw.js
services/asia-scraper/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run_tests.py
services/asia-scraper/src/: main.py
services/asia-scraper/src/api/: main.py
services/asia-scraper/src/config/: countries.py  settings.py
services/asia-scraper/src/database/: models.py  populate_lotteries.py  session.py
services/asia-scraper/src/scrapers/: __init__.py
services/asia-scraper/src/scrapers/base/: base_scraper.py  bs4_scraper.py  selenium_scraper.py
services/asia-scraper/src/scrapers/countries/: hong_kong.py  india.py  japan.py  malaysia.py  philippines.py  singapore.py  south_korea.py  taiwan.py  thailand.py  vietnam.py
services/asia-scraper/src/services/: orchestrator.py  scheduler.py
services/asia-scraper/src/utils/: logger.py
services/asia-scraper/tests/: test_base_scraper.py  test_india_scrapers.py  test_scheduler.py  test_scraper_registry.py  test_singapore_scrapers.py
src/: auth.ts
src/lib/: db.ts  (+4 more)
(+73 files in other folders)
