[tool.poetry]
name = "asia-lottery-scraper"
version = "1.0.0"
description = "Python-based lottery scraper for Asian countries"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
httpx = "^0.26.0"
beautifulsoup4 = "^4.12.3"
selenium = "^4.16.0"
scrapy = "^2.11.0"
apscheduler = "^3.10.4"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-dotenv = "^1.0.0"
structlog = "^24.1.0"
sentry-sdk = "^1.39.2"
alembic = "^1.13.1"
lxml = "^5.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^24.1.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
ipython = "^8.20.0"
types-redis = "^4.6.0"

[tool.poetry.scripts]
scraper = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
